Migrating over to the monorepo